Produktliste på forsiden og tilføj produkt side

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,3 @@
-
+spring.datasource.url=jdbc:mysql://localhost:3306/varekatalog?serverTimezone=UTC
+spring.datasource.username=Projekt
+spring.datasource.password=0
